FEAT update user roles
Only accessible to admins
- ban
- unban
- grant publisher
- grant admin